# logo-scraper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: companies.json
logo_scraper/: __init__.py  __main__.py  cli.py  models.py  orchestrator.py  utils.py
logo_scraper/scraper/: __init__.py  linkedin.py  logodev.py  website.py
tests/: test_cli.py  test_linkedin.py  test_logodev.py  test_website.py
